Fix for the php-fpm error, solves #1
 - [x] Fixes issue #1 reported for the php-fpm error

--- a/nginx-supervisor.ini
+++ b/nginx-supervisor.ini
@@ -7,6 +7,6 @@ user = root
 autostart = true
 
 [program:php-fpm]
-command = /usr/bin/php-fpm
+command = /usr/bin/php-fpm -F
 user = root
 autostart = true
